# tf2-backpack-parser

./: .env.example  .gitignore  pyproject.toml  tox.ini
backpack_tf2/app/: bp_acc.py  bp_api.py  config.py  entities.py  helpers.py  listings_repo.py  main.py  misc.py  setup.py
